Bugs found!
Found and fixed some display/layout issues with the initial code.

--- a/css/style.scss
+++ b/css/style.scss
@@ -37,7 +37,7 @@ body {
 	@include border-radius(4px);
 	color: #fff;
 	display: block;
-	font-size: 22px;
+	font-size: 20px;
 	line-height: 60px;
 	max-width: 207px;
 	padding: 0 27px 0 18px;
@@ -46,7 +46,7 @@ body {
 
 /* Main Features section */
 .main-features {
-	margin: 100px 0 28px 0;
+	margin: 100px 0 0 0;
 }
 .main-features__image {
 	text-align: center;
@@ -226,7 +226,7 @@ a.top-features__videos-item.even {
 }
 .top-features__details {
 	background: #fff;
-	margin: 138px 0 0 0;
+	margin: 0;
 	padding: 53px 46px 77px 46px;
 }
 .top-features__details-item {
@@ -245,9 +245,9 @@ a.top-features__videos-item.even {
 
 /* Detailed Specs section */
 .detailed-specs {
-	margin: -127px 0 1px 0;
 	overflow: hidden;
 	position: relative;
+	top: -127px;
 	z-index: 1;
 }
 .detailed-specs__heading-image {
@@ -301,7 +301,7 @@ a.top-features__videos-item.even {
 }
 a.detailed-specs__details-button {
 	@extend .section-button;
-	background: url('../img/detailed-specs__details-button-bg.png') no-repeat 187px center #ffd200;
+	background: url('../img/detailed-specs__details-button-bg.png') no-repeat 167px center #ffd200;
 }
 a.detailed-specs__details-button:hover {
 	color: #fff;
@@ -316,6 +316,8 @@ a.detailed-specs__details-button:hover {
 /* Read Reviews section */
 .reviews {
 	margin: 0 0 150px 0;
+	position: relative;
+	top: -127px;
 }
 .reviews__heading {	
 	h2 {
@@ -441,6 +443,16 @@ a.reviews__overall-score-button:hover {
 }
 
 @media only screen and (min-width : 480px) {
+	/* 480 Detailed Specs section */
+	.detailed-specs {
+		top: -180px;
+		width: 100%;
+	}
+	
+	/* 480 Reviews Specs section */
+	.reviews {
+		top: -180px;
+	}
 }
 @media only screen and (min-width : 768px) {
 	.section-button {
@@ -467,19 +479,15 @@ a.reviews__overall-score-button:hover {
 	.top-features__details-wrapper {
 		padding-left: 0;
 	}
-	
-	/* 768 Detailed Specs section */
-	.detailed-specs {
-		margin: -180px 0 1px 0;
+	.top-features__details {
+		margin: 138px 0 0 0;
 	}
+	
 	.detailed-specs__heading {
 		h2 {
 			font-size: 42px;
 			line-height: 46px;
 		}
-	}
-	a.detailed-specs__details-button {
-		background-position: 167px center;
 	}
 	#detailed-specs__details-item-js,
 	#detailed-specs__image-js {
